k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-frontend
  template:
    metadata:
      labels:
        app: task-frontend
    spec:
      containers:
      - name: frontend
        image: saikiran1412/task-frontend:v2 # Update with your DockerHub username and image tag
        imagePullPolicy: Always
        ports:
        - containerPort: 80
