k8s-manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: task-api # Matches the label in the Deployment
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      # nodePort: 30007
