k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: task-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      # nodePort: 30080
