k8s-manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis     # MUST match API REDIS_HOST

spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
